feat(youtube): complete YouTube video embedding with DRY principles and playback controls (ref: #103)
Implement comprehensive YouTube video embedding support across albums, carousels, and pages with centralized service architecture, type-safe constants, and automatic playback pausing.

YouTube Embedding Foundation:
- Created reusable YoutubeEmbed component for privacy-enhanced video embedding
- Extended ContentMetadata, ContentText, and PageContent models with youtubeId field
- Updated album gallery and grid views to display YouTube videos alongside images
- Enhanced carousel editor to support adding YouTube videos to image lists
- Added YouTube embedding support to dynamic content pages
- Provided CMS migration scripts to convert existing YouTube links to embedded videos

Centralized Service Architecture:
- Created youtube.model.ts with YouTubeDomain and YouTubeQuality enums for type-safe constants
- Implemented centralized YouTubeService with embedUrl() and thumbnailUrl() methods
- Refactored 5 files to use YouTubeService (location-extraction, index, card-editor, album-gallery, youtube-embed)
- Eliminated all hardcoded YouTube URLs across codebase

Playback Pausing - Carousel:
- Upgraded youtube-embed.ts to use official YouTube IFrame Player API
- Dynamically load iframe_api and create YT.Player instances
- Emit playbackStateChange events on video play/pause (state === 1 for playing)
- Carousel component listens to events and pauses auto-advance via noPause flag

Playback Pausing - Gallery:
- Implemented bidirectional postMessage communication with YouTube IFrame API
- Search document-wide for YouTube iframes (ng-gallery renders globally, not in component subtree)
- Send "listening" and addEventListener commands to enable state change notifications
- Detect playing state (state === 1) and call galleryRef.stop() to pause slideshow
- Auto-resume slideshow with galleryRef.play() when video stops
- Added 2-second initialization delay for reliable iframe loading

Carou

--- a/projects/ngx-ramblers/src/index.html
+++ b/projects/ngx-ramblers/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Permissions-Policy" content="compute-pressure=()">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link data-n-head="ssr" rel="apple-touch-icon" href="/assets/images/local/apple-touch-icon.png">
   <link data-n-head="ssr" rel="icon" sizes="16x16" href="favicon.ico">
